<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main">

    <Button
        android:id="@+id/btn_manage_person"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_person" />

    <Button
        android:id="@+id/btn_manage_status"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_manage_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_estatus" />

    <Button
        android:id="@+id/btn_manage_studies"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_manage_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_estud_person" />

    <Button
        android:id="@+id/btn_manage_speciality"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_manage_studies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_especialidad" />

    <Button
        android:id="@+id/btn_manage_laboral_situation"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_manage_speciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_estatus_laboral" />

</RelativeLayout>
